<resources>
    <string name="app_name">RecruitmentTestBTS</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="baru_disini">Baru disini?</string>
    <string name="register">Register</string>
    <string name="sudah_daftar">Sudah daftar?</string>
</resources>