<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:scrollbarSize="0dp"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btn_kembali_register"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/txt_title_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:layout_centerInParent="true"
                android:textSize="22sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:text="@string/register"/>

        </RelativeLayout>

        <EditText
            android:id="@+id/edt_email_register"
            android:background="@drawable/bg_edit_text"
            android:layout_width="match_parent"
            android:layout_marginTop="150dp"
            android:paddingStart="25dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:paddingEnd="25dp"
            android:layout_height="?attr/actionBarSize"
            tools:ignore="TextFields" />


        <EditText
            android:id="@+id/edt_username_register"
            android:background="@drawable/bg_edit_text"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:paddingStart="25dp"
            android:inputType="text"
            android:hint="@string/username"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:paddingEnd="25dp"
            android:layout_height="?attr/actionBarSize"/>

        <EditText
            android:id="@+id/edt_password_register"
            android:background="@drawable/bg_edit_text"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:paddingStart="25dp"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:fontFamily="@font/open_sans"
            android:textSize="16sp"
            android:paddingEnd="25dp"
            android:layout_height="?attr/actionBarSize"
            tools:ignore="TextFields" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="8dp"
            android:layout_marginStart="5dp"
            app:cardCornerRadius="26dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="120dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:text="@string/register"
                android:textColor="@color/white"
                android:fontFamily="@font/open_sans"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/bg_button_primary_enable"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sudah_daftar"
                android:fontFamily="@font/open_sans"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/txt_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>