<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:orientation="vertical"
    android:padding="25dp"
    android:scrollbarSize="0dp"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/open_sans"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="Test \nBTS.id"/>

        <TextView
            android:id="@+id/txt_title_signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:fontFamily="@font/open_sans"
            android:text="Hey!, \nLogin Sekarang"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold" />

        <View
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/open_sans"
            android:text="Masukkan Email dan Passwordmu"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/edt_username_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="75dp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/open_sans"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edt_password_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="25dp"
            android:background="@drawable/bg_edit_text"
            android:fontFamily="@font/open_sans"
            android:hint="@string/password"
            android:inputType="textEmailAddress"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:textSize="16sp"
            tools:ignore="TextFields" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="5dp"
            app:cardCornerRadius="26dp"
            app:cardElevation="8dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:text="@string/login"
                android:textColor="@color/white"
                android:fontFamily="@font/open_sans"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/bg_button_primary_enable"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans"
                android:text="@string/baru_disini"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>